[package]
name = "crane"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.3.0"
clap = { version = "4.3.3", features = ["derive"] }
inkwell = { version = "0.2.0", features = ["llvm16-0"] }
logos = "0.13.0"
serde = { version = "1.0.164", features = ["derive"] }
smol_str = { version = "0.2.0", features = ["serde"] }
thin-vec = "0.2.12"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml", "glob"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
